// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar matches snapshot and renders label 1`] = `
.c1 {
  display: flex;
  height: 40px;
  width: 40px;
  align-items: center;
}

.c3 {
  font-family: -apple-system,system-UI,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5em;
  font-weight: bold;
  padding: 4px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 0;
  margin-bottom: 0;
}

.c2 {
  border-width: 2px;
  border-color: #fff;
  border-style: solid;
  border-radius: 50%;
  background-color: #f9423a;
  color: #fff;
}

.c4 {
  user-select: none;
  text-transform: uppercase;
}

.c0 {
  display: flex;
  align-items: center;
}

.c5 {
  padding-left: 8px;
}

<span
  class="c0"
>
  <span
    class="c1 c2"
  >
    <p
      class="c3 c4"
      mx="auto"
      my="0"
      p="1"
    >
      a
    </p>
  </span>
  <span
    class="c5"
  >
    Some author
  </span>
</span>
`;

exports[`Avatar renders without label 1`] = `
.c1 {
  display: flex;
  height: 40px;
  width: 40px;
  align-items: center;
}

.c3 {
  font-family: -apple-system,system-UI,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5em;
  font-weight: bold;
  padding: 4px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 0;
  margin-bottom: 0;
}

.c2 {
  border-width: 2px;
  border-color: #fff;
  border-style: solid;
  border-radius: 50%;
  background-color: #f9423a;
  color: #fff;
}

.c4 {
  user-select: none;
  text-transform: uppercase;
}

.c0 {
  display: flex;
  align-items: center;
}

<span
  class="c0"
>
  <span
    class="c1 c2"
  >
    <p
      class="c3 c4"
      mx="auto"
      my="0"
      p="1"
    >
      a
    </p>
  </span>
</span>
`;
